--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -1,8 +1,8 @@
 .hero {
-  padding-bottom: 200px;
-  background: $color-secondary;
+  padding-bottom: 250px;
+  background: $color-primary;
   .carousel-indicators {
-    transform: translateY(80px);
+    transform: translateY(70px);
     li {
       margin-top: 100px;
       background-color: #fff;
