--- a/sass/style.scss
+++ b/sass/style.scss
@@ -3,4 +3,6 @@
 @import "base/base";
 @import "layout/header";
 @import "layout/hero";
+@import "layout/intro";
+@import "layout/product";
 @import "layout/footer";
