--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,13 +1,22 @@
 .header {
+  position: relative;
+  z-index: 2;
   width: 100%;
   display: flex;
   align-items: center;
   justify-content: space-between;
-  background-color: #bd5d03;
+  background-color: $color-primary;
   color: #fff;
   font-size: 16px;
   font-weight: 500;
   padding: 0 50px;
+  box-shadow: #404040 0px 0px 10px 2px;
+  a {
+    text-decoration: none;
+    &:hover {
+      color: inherit;
+    }
+  }
   &__item {
     padding: 25px 20px;
   }
