--- a/sass/layout/_intro.scss
+++ b/sass/layout/_intro.scss
@@ -48,7 +48,7 @@
     }
 
     &-heading {
-      background: $color-secondary;
+      background: $color-primary;
       width: max-content;
       padding: 10px 20px;
     }
