--- a/sass/layout/_banner.scss
+++ b/sass/layout/_banner.scss
@@ -1,7 +1,9 @@
 .banner {
-  padding: 50px 0;
+  padding-top: 50px;
   color: #fff;
-  //   text-align: center;
+  a {
+    text-decoration: none;
+  }
   &__list {
     @include flex(center, space-around, none);
   }
@@ -17,6 +19,16 @@
     }
     &-desc {
       margin: 20px;
+    }
+    &-button {
+      border: 2px solid $color-primary;
+      color: $color-secondary;
+      transition: all 0.2s linear;
+      &:hover {
+        border: 2px solid $color-secondary;
+        background: $color-secondary;
+        color: #fff;
+      }
     }
   }
   &__left {
