--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -5,7 +5,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  background-color: $color-primary;
+  background-color: $color-secondary;
   color: #fff;
   font-size: 16px;
   font-weight: 500;
