--- a/sass/layout/_services.scss
+++ b/sass/layout/_services.scss
@@ -1,5 +1,5 @@
 .services {
-  color: $color-secondary;
+  color: $color-primary;
   margin-bottom: 50px;
   a {
     text-decoration: none;
@@ -29,13 +29,14 @@
     }
     &-desc {
       margin-bottom: 35px;
+      color: $color-orange-light;
     }
     &-button {
-      border: 2px solid $color-secondary;
+      border: 2px solid $color-primary;
       transition: all 0.2s linear;
       &:hover {
         border: 0;
-        background: $color-primary;
+        background: $color-secondary;
         color: #fff;
       }
     }
