--- a/sass/layout/_blog.scss
+++ b/sass/layout/_blog.scss
@@ -8,29 +8,24 @@
   &__heading {
     font-size: 50px;
     font-weight: 700;
-    margin: 30px;
+    margin: 30px 0 10px 0;
   }
   &__desc {
     display: inline-block;
     font-weight: 200;
-    margin-bottom: 30px;
+    margin-bottom: 50px;
   }
   &__list {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 50px;
   }
-  &__item {
-    box-shadow: #c5c5c5 0px 5px 10px 0px;
-  }
+
   &__image {
-    height: 180px;
-    overflow: hidden;
-    img {
-      transform: scale(1.9);
-    }
   }
   &__content {
+    box-shadow: #c5c5c5 0px 5px 10px 0px;
+
     &-inner {
       padding: 20px;
       @include flex(center, center, none);
@@ -56,5 +51,100 @@
         color: #fff;
       }
     }
+  }
+
+  &__detail {
+    padding: 30px;
+    text-align: left;
+    &-heading {
+      text-align: right;
+      margin-bottom: 50px;
+      i {
+        font-size: 35px;
+        margin: 0 10px;
+        color: $color-secondary;
+        // cursor: pointer;
+      }
+    }
+    &-logo {
+      @include flex(center, none, none);
+      margin-bottom: 30px;
+    }
+    &-brand {
+      margin-left: 20px;
+
+      p {
+        margin: 0;
+        padding: 0;
+      }
+    }
+    &-link {
+      font-size: 20px;
+      font-weight: 700;
+      margin-bottom: 10px;
+      text-decoration: solid;
+      &:hover {
+        color: $color-secondary;
+      }
+    }
+    &-desc {
+      margin-bottom: 20px;
+      display: inline-block;
+      line-height: 1.3;
+      color: $color-orange-light;
+      &-link:hover {
+        color: $color-secondary;
+      }
+    }
+    &-time {
+      display: inline-block;
+      margin-bottom: 20px;
+      color: $color-secondary;
+    }
+    &-icon i {
+      margin-right: 15px;
+      color: $color-orange-light;
+      cursor: pointer;
+      &::before {
+        margin-right: 5px;
+        color: $color-secondary;
+      }
+    }
+  }
+
+  // hiệu ứng xoay đối tượng
+  &__item {
+    width: 100%;
+    height: 400px;
+    perspective: 1500px;
+  }
+  &__content {
+    width: 100%;
+    height: 100%;
+    perspective: 1500px;
+    position: relative;
+    transform-style: preserve-3d;
+    transition: transform 0.6s;
+  }
+  &__content-front,
+  &__content-back {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    backface-visibility: hidden;
+  }
+  &__content-back {
+    transform: rotateY(-180deg);
+  }
+  &__item .blog__inner {
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+  }
+
+  &__item:hover .blog__content {
+    transform: rotateY(180deg);
   }
 }
