--- a/sass/layout/_blog.scss
+++ b/sass/layout/_blog.scss
@@ -21,15 +21,13 @@
     gap: 50px;
   }
 
-  &__image {
-  }
   &__content {
     box-shadow: #c5c5c5 0px 5px 10px 0px;
-
     &-inner {
       padding: 20px;
       @include flex(center, center, none);
       flex-direction: column;
+      padding-bottom: 0;
     }
     &-title {
       font-size: 20px;
@@ -40,35 +38,40 @@
       margin-bottom: 15px;
       color: $color-orange-light;
     }
-    &-link {
-      font-weight: 700;
-      font-size: 18px;
-      padding: 15px 20px;
-      border-radius: 10px;
-      transition: all 0.2s linear;
-      &:hover {
-        background-color: $color-secondary;
-        color: #fff;
-      }
+  }
+
+  &__button {
+    @include flex(center, center, none);
+    font-weight: 700;
+    font-size: 18px;
+    padding: 20px 0;
+    width: 70%;
+    margin: 0 auto;
+    border-radius: 10px;
+    transition: all 0.2s linear;
+    cursor: pointer;
+    position: relative;
+    &:hover {
+      background-color: $color-secondary;
+      color: #fff;
     }
   }
 
   &__detail {
-    padding: 30px;
+    padding: 20px 30px 0 30px;
     text-align: left;
     &-heading {
       text-align: right;
-      margin-bottom: 50px;
+      margin-bottom: 20px;
       i {
         font-size: 35px;
         margin: 0 10px;
         color: $color-secondary;
-        // cursor: pointer;
       }
     }
     &-logo {
       @include flex(center, none, none);
-      margin-bottom: 30px;
+      margin-bottom: 20px;
     }
     &-brand {
       margin-left: 20px;
@@ -88,26 +91,30 @@
       }
     }
     &-desc {
-      margin-bottom: 20px;
+      margin-bottom: 15px;
       display: inline-block;
       line-height: 1.3;
       color: $color-orange-light;
       &-link:hover {
         color: $color-secondary;
+        cursor: pointer;
       }
     }
     &-time {
       display: inline-block;
-      margin-bottom: 20px;
+      margin-bottom: 15px;
       color: $color-secondary;
     }
-    &-icon i {
-      margin-right: 15px;
-      color: $color-orange-light;
-      cursor: pointer;
-      &::before {
-        margin-right: 5px;
-        color: $color-secondary;
+    &-icon {
+      margin-bottom: 20px;
+      i {
+        margin-right: 15px;
+        color: $color-orange-light;
+        cursor: pointer;
+        &::before {
+          margin-right: 5px;
+          color: $color-secondary;
+        }
       }
     }
   }
