update code blog and button

--- a/css/style.css
+++ b/css/style.css
@@ -248,10 +248,6 @@ input {
   text-decoration: none;
 }
 
-.intro a:hover {
-  color: inherit;
-}
-
 .intro__list {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -340,6 +336,32 @@ input {
   margin-bottom: 20px;
 }
 
+.intro__inner-btn {
+  color: #2198dc;
+  border: 2px solid currentColor;
+  -webkit-transition: all 0.2s linear;
+  -o-transition: all 0.2s linear;
+  transition: all 0.2s linear;
+}
+
+.intro__inner-btn:hover {
+  color: #fff;
+  background: #e77306;
+  border: 2px solid #e77306;
+}
+
+.intro__inner-link {
+  -webkit-transition: all 0.2s linear;
+  -o-transition: all 0.2s linear;
+  transition: all 0.2s linear;
+}
+
+.intro__inner-link:hover {
+  color: #fff;
+  background: #e77306;
+  border: 2px solid #e77306;
+}
+
 .intro__inner-heading {
   background: #974c06;
   width: -webkit-max-content;
@@ -395,6 +417,14 @@ input {
   font-weight: bold;
   color: #974c06;
   border-radius: 50px;
+  -webkit-transition: all 0.2s linear;
+  -o-transition: all 0.2s linear;
+  transition: all 0.2s linear;
+}
+
+.product .nav-pills .nav-item .nav-link:hover {
+  font-size: 18px;
+  color: #e77306;
 }
 
 .product .nav-pills .nav-item .active {
@@ -403,6 +433,7 @@ input {
   transition: all 0.2s linear;
   background: #e77306;
   color: #fff;
+  font-size: 18px;
 }
 
 .product .nav-pills .nav-item .active::after {
@@ -483,6 +514,21 @@ input {
 
 .product__content-explore {
   margin-right: 50px;
+}
+
+.product__content-explore:hover {
+  color: inherit;
+}
+
+.product__content-build {
+  -webkit-transition: all 0.2s linear;
+  -o-transition: all 0.2s linear;
+  transition: all 0.2s linear;
+}
+
+.product__content-build:hover {
+  background: #974c06;
+  border: 2px solid #974c06;
 }
 
 .product__content-bottom {
@@ -566,14 +612,15 @@ input {
 }
 
 .services__item-button {
-  border: 2px solid #974c06;
+  border: 2px solid #2198dc;
   -webkit-transition: all 0.2s linear;
   -o-transition: all 0.2s linear;
   transition: all 0.2s linear;
+  color: #2198dc;
 }
 
 .services__item-button:hover {
-  border: 0;
+  border: 2px solid #e77306;
   background: #e77306;
   color: #fff;
 }
