--- a/sass/helper/_variable.scss
+++ b/sass/helper/_variable.scss
@@ -4,6 +4,7 @@ $font-secondary: "Poppins", sans-serif;
 $color-primary: #974c06;
 $color-secondary: #e77306;
 $color-orange-light: #8b5d33;
+$color-blue: #2198dc;
 
 @mixin flex($align, $jus, $wrap) {
   display: flex;
