--- a/sass/layout/_product.scss
+++ b/sass/layout/_product.scss
@@ -47,11 +47,18 @@
         font-weight: bold;
         color: $color-primary;
         border-radius: 50px;
+        transition: all 0.2s linear;
+        &:hover {
+          font-size: 18px;
+          color: $color-secondary;
+        }
       }
       .active {
         transition: all 0.2s linear;
         background: $color-secondary;
         color: #fff;
+        font-size: 18px;
+
         &::after {
           content: "";
           display: block;
@@ -112,6 +119,16 @@
     }
     &-explore {
       margin-right: 50px;
+      &:hover {
+        color: inherit;
+      }
+    }
+    &-build {
+      transition: all 0.2s linear;
+      &:hover {
+        background: $color-primary;
+        border: 2px solid $color-primary;
+      }
     }
     &-bottom {
       border-top: 2px solid #898989;
