--- a/sass/layout/_services.scss
+++ b/sass/layout/_services.scss
@@ -32,10 +32,11 @@
       color: $color-orange-light;
     }
     &-button {
-      border: 2px solid $color-primary;
+      border: 2px solid $color-blue;
       transition: all 0.2s linear;
+      color: $color-blue;
       &:hover {
-        border: 0;
+        border: 2px solid $color-secondary;
         background: $color-secondary;
         color: #fff;
       }
