--- a/css/style.css
+++ b/css/style.css
@@ -34,6 +34,7 @@ button {
 a {
   text-decoration: none;
   color: inherit;
+  line-height: normal;
 }
 
 img {
@@ -59,7 +60,7 @@ textarea,
 button,
 select {
   font-family: "Open Sans", sans-serif;
-  font-size: 14px;
+  font-size: 16px;
   outline: none;
   border: none;
   -webkit-box-sizing: border-box;
@@ -717,7 +718,7 @@ input {
 .blog {
   color: #974c06;
   text-align: center;
-  margin-top: 100px;
+  margin: 100px 0;
 }
 
 .blog a {
@@ -742,6 +743,7 @@ input {
   -ms-grid-columns: (1fr)[3];
       grid-template-columns: repeat(3, 1fr);
   gap: 50px;
+  margin-bottom: 100px;
 }
 
 .blog__content {
@@ -942,4 +944,84 @@ input {
 .blog__item:hover .blog__content {
   -webkit-transform: rotateY(180deg);
           transform: rotateY(180deg);
+}
+
+.blog__search-link {
+  display: inline-block;
+  margin-bottom: 50px;
+  padding: 5px 25px;
+  background: #2198dc;
+  border: 2px solid #2198dc;
+  color: #fff;
+  font-weight: 700;
+  font-size: 20px;
+  border-radius: 50px;
+  -webkit-transition: all 0.2s linear;
+  -o-transition: all 0.2s linear;
+  transition: all 0.2s linear;
+}
+
+.blog__search-link:hover {
+  border: 2px solid #e77306;
+  color: #e77306;
+  background: transparent;
+}
+
+.blog__search-group {
+  margin: 0 auto;
+  -webkit-box-shadow: inset rgba(197, 197, 197, 0.5) 2px 2px 5px 0;
+          box-shadow: inset rgba(197, 197, 197, 0.5) 2px 2px 5px 0;
+  width: 90%;
+  padding: 10px 50px;
+  border-radius: 50px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -ms-flex-wrap: none;
+      flex-wrap: none;
+}
+
+.blog__search-group i {
+  margin-right: 15px;
+  font-size: 25px;
+  font-weight: 700;
+  color: #e77306;
+}
+
+.blog__search-group input {
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
+  color: #2198dc;
+  font-size: 18px;
+}
+
+.blog__search-group input::-webkit-input-placeholder {
+  color: #2198dc;
+}
+
+.blog__search-group input::-moz-input-placeholder {
+  color: #2198dc;
+}
+
+.blog__search-group a {
+  margin-left: 15px;
+  background: transparent;
+  font-weight: 700;
+  color: #e77306;
+  border: 3px solid #e77306;
+  border-radius: 50px;
+  padding: 5px 15px;
+}
+
+.blog__search-group a:hover {
+  background: #e77306;
+  color: #fff;
+  border: 3px solid #e77306;
 }
