--- a/sass/layout/_blog.scss
+++ b/sass/layout/_blog.scss
@@ -178,7 +178,7 @@
     }
     &-group {
       margin: 0 auto;
-      box-shadow: inset rgba(#c5c5c5, 0.5) 2px 2px 5px 0;
+      box-shadow: inset rgba(#c5c5c5, 0.5) 2px 2px 5px 2px;
       width: 90%;
       padding: 10px 50px;
       border-radius: 50px;
