--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -18,7 +18,7 @@
     }
   }
   &__item {
-    padding: 25px 20px;
+    padding: 20px;
   }
   &__left {
     @include flex(center, space-between, none);
@@ -44,10 +44,40 @@
   }
 
   &__right {
+    @include flex(center, space-around, none);
+    margin: 0;
     &-item {
-      &:nth-child(4),
+      list-style: none;
+      margin: 0 10px;
+      position: relative;
+
+      a {
+        padding: 0 10px;
+        position: relative;
+        &::after {
+          display: block;
+          content: "";
+          width: 0;
+          height: 3px;
+          background: #fff;
+          position: absolute;
+          bottom: -10px;
+          left: 0;
+          transition: all 0.2s linear;
+        }
+      }
+
+      &:hover {
+        a::after {
+          width: 100%;
+        }
+      }
+
       &:last-child {
-        border-left: 1px solid #fff;
+        a::after {
+          content: none;
+        }
+        font-size: 25px;
       }
     }
   }
