--- a/sass/layout/_product.scss
+++ b/sass/layout/_product.scss
@@ -58,12 +58,15 @@
         background: $color-secondary;
         color: #fff;
         font-size: 18px;
+        &:hover {
+          color: #fff;
+        }
 
         &::after {
           content: "";
           display: block;
-          width: 35px;
-          height: 35px;
+          width: 25px;
+          height: 25px;
           background: white;
           position: absolute;
           top: 125%;
@@ -82,9 +85,10 @@
   &__content {
     width: 50%;
     position: absolute;
-    top: 0%;
+    top: 50%;
     left: 0%;
     padding-top: 20px;
+    transform: translateY(-50%);
     &-heading {
       font-size: 20px;
     }
@@ -92,10 +96,7 @@
       width: 50%;
       margin: 15px 0;
     }
-    &-desc {
-      display: inline-block;
-      margin-bottom: 20px;
-    }
+
     &-detail,
     &-button,
     &-bottom {
